--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pages:preview": "vite preview",
     "pages:deploy": "vite build && wrangler pages deploy ./dist-site --project-name=discode-landing",
     "setup:claude-plugin": "tsx scripts/setup-claude-plugin.ts",
+    "setup:gemini-hook": "tsx scripts/setup-gemini-hook.ts",
     "setup:opencode-plugin": "tsx scripts/setup-opencode-plugin.ts",
     "build:release:binaries": "bun run scripts/build-binaries.ts",
     "build:release:binaries:single": "bun run scripts/build-binaries.ts --single",
