--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "sidecar:build": "cargo build --release --manifest-path sidecar/pty-rust/Cargo.toml"
   },
   "keywords": [
     "discord",
